--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script  src="../../public/js/bootstrap-datetimepicker.min.js"></script>
-
-    <title>AR Bulk</title>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.42/js/bootstrap-datetimepicker.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+ 
+<title>AR Bulk</title>
   </head>
   <body>
     <div id="root">
     </div>
     <script src="../dist/bundle.js"></script>
+    
   </body>
 </html>
